--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "petsfet",
+  "name": "petvetpals",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,8 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
