--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "next": "14.2.6",
     "react": "^18",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-tabs": "^6.0.2"
