--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
+    "@mui/styled-engine-sc": "^6.1.5",
     "date-fns": "^4.1.0",
     "next": "14.2.6",
     "react": "^18",
     "react-day-picker": "^9.1.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-tabs": "^6.0.2"
+    "react-tabs": "^6.0.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "eslint": "^8",
