--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "next": "14.2.6",
     "react": "^18",
