--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "react": "^18",
+    "react-cookie": "^1.0.5",
     "react-day-picker": "^9.1.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
