structured the hero section and a simple feature section

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-tabs": "^6.0.2",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "eslint": "^8",
