--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.3",
     "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "react": "^18",
