--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.3",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.475.0",
     "next": "14.2.6",
     "react": "^18",
     "react-cookie": "^1.0.5",
