--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
