--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
-    "swiper": "^11.2.2"
+    "swiper": "^11.2.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.23",
