--- a/package.json
+++ b/package.json
@@ -11,12 +11,28 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.3",
     "html2pdf.js": "^0.9.0",
     "js-cookie": "^3.0.5",
@@ -24,8 +40,9 @@
     "next": "14.2.6",
     "react": "^18",
     "react-cookie": "^1.0.5",
-    "react-day-picker": "^9.1.4",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-tabs": "^6.0.2",
@@ -35,7 +52,10 @@
     "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.2",
-    "uuid": "^11.1.0"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "daisyui": "^4.12.23",
